--- a/_layouts/iframe.html
+++ b/_layouts/iframe.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-  <link type="text/css" rel="stylesheet" href="/lightslider/dist/css/lightslider.css" />
+  <link type="text/css" rel="stylesheet" href="{{ site.github.url }}/lightslider/dist/css/lightslider.css" />
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="/lightslider/dist/js/lightslider.js"></script>
+  <script src="{{ site.github.url }}/lightslider/dist/js/lightslider.js"></script>
   <style>
     img {
       max-height: 100%;
