--- a/_layouts/iframe.html
+++ b/_layouts/iframe.html
@@ -5,8 +5,7 @@
   <script src="{{ site.github.url }}/lightslider/dist/js/lightslider.js"></script>
   <style>
     img {
-      max-height: 100%;
-      max-width: 100%;
+      width: 100%;
     }
   </style>
 </head>
