--- a/_layouts/iframe.html
+++ b/_layouts/iframe.html
@@ -18,7 +18,7 @@
         "loop": {{ page.loop | default: false }},
         "speed": {{ page.speed | default: 600 }},
         "vertical": {{ page.vertical | default: false }},
-        "auto": {{ page.auto | default: true }},
+        "auto": {{ page.auto | default: false }},
         "pauseOnHover": {{ page.pauseOnHover | default: false }}
       });
     });
