--- a/_layouts/iframe.html
+++ b/_layouts/iframe.html
@@ -17,6 +17,7 @@
         "item": {{ page.item | default: 1 }},
         "loop": {{ page.loop | default: false }},
         "speed": {{ page.speed | default: 600 }},
+        "pause": {{ page.pause | default: 2000 }},
         "vertical": {{ page.vertical | default: false }},
         "auto": {{ page.auto | default: false }},
         "pauseOnHover": {{ page.pauseOnHover | default: false }}
