added mode as a param of slideshowsw

--- a/_layouts/iframe.html
+++ b/_layouts/iframe.html
@@ -16,6 +16,7 @@
       $("ul").lightSlider({
         "item": {{ page.item | default: 1 }},
         "loop": {{ page.loop | default: false }},
+        "mode": "{{ page.mode | default: slide }}",
         "speed": {{ page.speed | default: 600 }},
         "pause": {{ page.pause | default: 2000 }},
         "vertical": {{ page.vertical | default: false }},
