--- a/_layouts/iframe.html
+++ b/_layouts/iframe.html
@@ -27,7 +27,7 @@
         "pauseOnHover": {{ page.pauseOnHover | default: false }},
         "pager": {{ page.pager | default: true }},
         "controls": {{ page.cotrols | default: true }},
-        "adaptiveHeight": {{ page.adaptiveHeight | default: true }}
+        "adaptiveHeight": {{ page.adaptiveHeight | default: false }}
       });
     });
     {% for elem in page.style %}
