--- a/_layouts/iframe.html
+++ b/_layouts/iframe.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
 <html>
 <head>
+  {% include head.html %}
   <link type="text/css" rel="stylesheet" href="{{ site.github.url }}/lightslider/dist/css/lightslider.css" />
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="{{ site.github.url }}/lightslider/dist/js/lightslider.js"></script>
   <style>
     body {
       margin: 0;
+      overflow-x: hidden;
     }
     img {
       min-width: 100%
